--- a/index.html
+++ b/index.html
@@ -6,10 +6,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confiance</title>
+
+    <!-- スタイルシート -->
+    <link rel="stylesheet" href="css/sanitize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+<header class="l-header">
+    <h1>株式会社　Confiance</h1>
+    <h3>〜コンフィアンス〜</h3>
+    
+    <h2>電話　000ー000ー000</h2>
 
+</header>
+
+<main class="l-main">
+
+
+</main>
+
+
+
+
+
+
+<footer class="l-footer">
+
+</footer>
+<script src="/js/jquery-3.6.1.min.js"></script>
+<script src="/js/script.js"></script>
 </body>
-
 </html>
