--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
 
 <body>
 <header class="l-header">
-    <h1>株式会社　Confiance</h1>
+    <div>
+    <h1 class="c-text">株式会社　Confiance</h1>
     <h3>〜コンフィアンス〜</h3>
-    
+    </div>
+
+    <div>
     <h2>電話　000ー000ー000</h2>
 
+    <a>事業内容</a>
+    <a>会社概要</a>
+    <a>お問合せ</a>
+    </div>
 </header>
 
 <main class="l-main">
