--- a/index.html
+++ b/index.html
@@ -8,28 +8,34 @@
     <title>Confiance</title>
 
     <!-- スタイルシート -->
-    <link rel="stylesheet" href="css/sanitize.css">
+    <link rel="stylesheet" href="css/ress.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <!-- ヘッダー -->
 <header class="l-header">
-    <div>
-    <h1 class="c-text">株式会社　Confiance</h1>
-    <h3>〜コンフィアンス〜</h3>
+    <div class="p-title">
+    <h1 class="c-text c-text--top">株式会社　Confiance</h1>
+    <h3 class="c-text c-text--sub">〜コンフィアンス〜</h3>
     </div>
-
     <div>
-    <h2>電話　000ー000ー000</h2>
-
-    <a>事業内容</a>
-    <a>会社概要</a>
-    <a>お問合せ</a>
+    <h2 class="c-text c-text--tel">電話　000ー000ー000</h2>
+        <ul class="c-text"><a>事業内容</a></ul>
+        <ul class="c-text"><a>会社概要</a></ul>
+        <ul class="c-text"><a>お問合せ</a></ul>
     </div>
+    <span></span>
+    <span></span>
+    <span></span>
 </header>
-
+    <!-- トップ画面 -->
 <main class="l-main">
+<div class="p-front__top">
 
+    <h1 class="p-front__title c-text">障がい福祉コンサルティング</h1>
+
+</div>
 
 </main>
 
@@ -37,7 +43,7 @@
 
 
 
-
+<sidebar class="l-sidebar"></sidebar>
 <footer class="l-footer">
 
 </footer>
