--- a/index.html
+++ b/index.html
@@ -21,20 +21,52 @@
     </div>
     <div>
     <h2 class="c-text c-text--tel">電話　000ー000ー000</h2>
-        <ul class="c-text"><a>事業内容</a></ul>
-        <ul class="c-text"><a>会社概要</a></ul>
-        <ul class="c-text"><a>お問合せ</a></ul>
+    <!-- サイドバー -->
+    <sidebar class="l-sidebar">
+        <nav class=""></nav>
+        <ul><a href="#" class="c-text">事業内容</a></ul>
+        <ul><a href="#" class="c-text">会社概要</a></ul>
+        <ul><a href="#" class="c-text">お問合せ</a></ul>
     </div>
+    <button>
     <span></span>
     <span></span>
     <span></span>
+    </button>
+</sidebar>
+
 </header>
     <!-- トップ画面 -->
 <main class="l-main">
 <div class="p-front__top">
 
     <h1 class="p-front__title c-text">障がい福祉コンサルティング</h1>
-
+    <P class="c-text">テキストが入ります。テキストが入ります。</P>
+</div>
+<div class="p-box--news">
+<ul class="p-box">
+    <li class="p-box--news__group">
+        <a href="#">
+            <p class="date">2020/4/15</p>
+            <!-- <p class="category"><span>お知らせ</span></p> -->
+            <p class="title">ここにお知らせが入りますここにお知らせが入りますここにお知らせが入ります</p>
+        </a>
+    </li>
+    <li class="-box--news__group">
+        <a href="#">
+            <p class="date">2020/4/15</p>
+            <!-- <p class="category"><span>お知らせ</span></p> -->
+            <p class="title">ここにお知らせが入りますここにお知らせが入りますここにお知らせが入ります</p>
+        </a>
+    </li>
+    <li class="-box--news__group">
+        <a href="#">
+            <p class="date">2020/4/15</p>
+            <!-- <p class="category"><span>お知らせ</span></p> -->
+            <p class="title">ここにお知らせが入りますここにお知らせが入りますここにお知らせが入ります</p>
+        </a>
+    </li>
+</ul>
 </div>
 
 </main>
@@ -43,7 +75,6 @@
 
 
 
-<sidebar class="l-sidebar"></sidebar>
 <footer class="l-footer">
 
 </footer>
