--- a/index.html
+++ b/index.html
@@ -13,71 +13,69 @@
 </head>
 
 <body>
+<div class="c-wrapper">
     <!-- ヘッダー -->
-<header class="l-header">
-    <div class="p-title">
-    <h1 class="c-text c-text--top">株式会社　Confiance</h1>
-    <h3 class="c-text c-text--sub">〜コンフィアンス〜</h3>
-    </div>
-    <div>
-    <h2 class="c-text c-text--tel">電話　000ー000ー000</h2>
-    <!-- サイドバー -->
-    <sidebar class="l-sidebar">
-        <nav class=""></nav>
-        <ul><a href="#" class="c-text">事業内容</a></ul>
-        <ul><a href="#" class="c-text">会社概要</a></ul>
-        <ul><a href="#" class="c-text">お問合せ</a></ul>
-    </div>
-    <button>
-    <span></span>
-    <span></span>
-    <span></span>
-    </button>
-</sidebar>
-
-</header>
-    <!-- トップ画面 -->
-<main class="l-main">
-<div class="p-front__top">
-
-    <h1 class="p-front__title c-text">障がい福祉コンサルティング</h1>
-    <P class="c-text">テキストが入ります。テキストが入ります。</P>
+    <header class="l-header">
+        <div class="p-title">
+        <h1 class="c-text c-text--top">株式会社　Confiance</h1>
+        <h3 class="c-text c-text--sub">〜コンフィアンス〜</h3>
+        </div>
+        <div>
+        <h2 class="c-text c-text--tel">電話　000ー000ー000</h2>
+        <!-- サイドバー -->
+        <sidebar class="l-sidebar">
+            <nav class=""></nav>
+            <ul><a href="#" class="c-text">事業内容</a></ul>
+            <ul><a href="#" class="c-text">会社概要</a></ul>
+            <ul><a href="#" class="c-text">お問合せ</a></ul>
+        </div>
+        <button>
+        <span></span>
+        <span></span>
+        <span></span>
+        </button>
+    </sidebar>
+    </header>
+        <!-- トップ画面 -->
+    <main class="l-main">
+        <div class="p-front__top">
+            <h1 class="p-front__title c-text">障がい福祉コンサルティング</h1>
+            <P class="c-text">テキストが入ります。テキストが入ります。</P>
+        </div>
+        <div class="p-box--news">
+            <ul class="p-box">
+                <li class="p-box--news__group">
+                    <a href="#">
+                        <p class="">2020/4/15</p>
+                        <p class="">ここにお知らせが入りますここにお知らせが入りますここにお知らせが入ります</p>
+                    </a>
+                </li>
+                <li class="p-box--news__group">
+                    <a href="#">
+                        <p class="">2020/4/15</p>
+                        <p class="">ここにお知らせが入りますここにお知らせが入りますここにお知らせが入ります</p>
+                    </a>
+                </li>
+                <li class="p-box--news__group">
+                    <a href="#">
+                        <p class="">2020/4/15</p>
+                        <!-- <p class="category"><span>お知らせ</span></p> -->
+                        <p class="">ここにお知らせが入りますここにお知らせが入りますここにお知らせが入ります</p>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="p-box--menu u-padding20">
+            <div class="p-box--menu__open u-margin20">
+                事業開業・開設支援
+            </div>
+            <div class="p-box--menu__support u-margin20">
+                経営・運営改善
+            </div>
+        </div>
+    </main>
+    <footer class="l-footer">プライバシーポリシー/Copyright © Confiance Ltd.</footer>
 </div>
-<div class="p-box--news">
-<ul class="p-box">
-    <li class="p-box--news__group">
-        <a href="#">
-            <p class="date">2020/4/15</p>
-            <!-- <p class="category"><span>お知らせ</span></p> -->
-            <p class="title">ここにお知らせが入りますここにお知らせが入りますここにお知らせが入ります</p>
-        </a>
-    </li>
-    <li class="-box--news__group">
-        <a href="#">
-            <p class="date">2020/4/15</p>
-            <!-- <p class="category"><span>お知らせ</span></p> -->
-            <p class="title">ここにお知らせが入りますここにお知らせが入りますここにお知らせが入ります</p>
-        </a>
-    </li>
-    <li class="-box--news__group">
-        <a href="#">
-            <p class="date">2020/4/15</p>
-            <!-- <p class="category"><span>お知らせ</span></p> -->
-            <p class="title">ここにお知らせが入りますここにお知らせが入りますここにお知らせが入ります</p>
-        </a>
-    </li>
-</ul>
-</div>
-
-</main>
-
-
-
-
-
-<footer class="l-footer">
-
-</footer>
 <script src="/js/jquery-3.6.1.min.js"></script>
 <script src="/js/script.js"></script>
 </body>
