--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <ul><a href="#" class="c-text">会社概要</a></ul>
             <ul><a href="#" class="c-text">お問合せ</a></ul>
         </div>
-        <button>
-        <span></span>
-        <span></span>
-        <span></span>
+        <button class="c-buttom">
+        <span class="c-line"></span>
+        <span class="c-line"></span>
+        <span class="c-line"></span>
         </button>
     </sidebar>
     </header>
@@ -74,7 +74,8 @@
             </div>
         </div>
     </main>
-    <footer class="l-footer">プライバシーポリシー/Copyright © Confiance Ltd.</footer>
+    <footer class="l-footer p-footer">
+        プライバシーポリシー/Copyright © Confiance Ltd.</footer>
 </div>
 <script src="/js/jquery-3.6.1.min.js"></script>
 <script src="/js/script.js"></script>
