--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <ul><a href="#" class="c-text">会社概要</a></ul>
             <ul><a href="#" class="c-text">お問合せ</a></ul>
         </div>
-        <button class="c-buttom">
+        <button class="c-button">
         <span class="c-line"></span>
         <span class="c-line"></span>
         <span class="c-line"></span>
