--- a/index.html
+++ b/index.html
@@ -7,36 +7,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confiance</title>
 
-    <!-- スタイルシート -->
+<!-- スタイルシート -->
     <link rel="stylesheet" href="css/ress.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 <div class="c-wrapper">
-    <!-- ヘッダー -->
+<!-- ヘッダー -->
     <header class="l-header">
         <div class="p-title">
         <h1 class="c-text c-text--top">株式会社　Confiance</h1>
         <h3 class="c-text c-text--sub">〜コンフィアンス〜</h3>
         </div>
-        <div>
+        <!-- <div> -->
         <h2 class="c-text c-text--tel">電話　000ー000ー000</h2>
-        <!-- サイドバー -->
+<!-- サイドバー -->
         <sidebar class="l-sidebar">
             <nav class=""></nav>
             <ul><a href="#" class="c-text">事業内容</a></ul>
             <ul><a href="#" class="c-text">会社概要</a></ul>
             <ul><a href="#" class="c-text">お問合せ</a></ul>
-        </div>
+        <!-- </div> -->
         <button class="c-button">
-        <span class="c-line"></span>
-        <span class="c-line"></span>
-        <span class="c-line"></span>
+        <span class="c-line c-button__br"></span>
+        <span class="c-line c-button__br"></span>
+        <span class="c-line c-button__br"></span>
         </button>
     </sidebar>
     </header>
-        <!-- トップ画面 -->
+<!-- トップ画面 -->
     <main class="l-main">
         <div class="p-front__top">
             <h1 class="p-front__title c-text">障がい福祉コンサルティング</h1>
