--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@
         <h2 class="c-text c-text--tel">電話　000ー000ー000</h2>
 <!-- サイドバー -->
         <sidebar class="l-sidebar">
-            <nav class=""></nav>
+            <nav class="p-menu">
+            <button class="c-button">
+                <span class="c-line c-button__br"></span>
+                <span class="c-line c-button__br"></span>
+                <span class="c-line c-button__br"></span>
+                </button>
             <ul><a href="#" class="c-text">事業内容</a></ul>
             <ul><a href="#" class="c-text">会社概要</a></ul>
             <ul><a href="#" class="c-text">お問合せ</a></ul>
         <!-- </div> -->
-        <button class="c-button">
-        <span class="c-line c-button__br"></span>
-        <span class="c-line c-button__br"></span>
-        <span class="c-line c-button__br"></span>
-        </button>
+            </nav>
     </sidebar>
     </header>
 <!-- トップ画面 -->
