--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <span class="c-line c-button__br"></span>
                 <span class="c-line c-button__br"></span>
                 </button>
-            <ul><a href="#" class="c-text">事業内容</a></ul>
-            <ul><a href="#" class="c-text">会社概要</a></ul>
-            <ul><a href="#" class="c-text">お問合せ</a></ul>
+            <ul class="u-padding10"><a href="#" class="c-text">事業内容</a></ul>
+            <ul class="u-padding10"><a href="#" class="c-text">会社概要</a></ul>
+            <ul class="u-padding10"><a href="#" class="c-text">お問合せ</a></ul>
         <!-- </div> -->
             </nav>
     </sidebar>
