--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         </div>
         <div class="p-box--news">
             <ul class="p-box">
+                <p>お知らせ</p>
                 <li class="p-box--news__group">
                     <a href="#">
                         <p class="">2020/4/15</p>
@@ -77,7 +78,9 @@
         </div>
     </main>
     <footer class="l-footer p-footer">
-        プライバシーポリシー/Copyright © Confiance Ltd.</footer>
+
+        <p>プライバシーポリシー</p>
+        <p>Copyright © Confiance Ltd.</p></footer>
 </div>
 <script src="/js/jquery-3.6.1.min.js"></script>
 <script src="/js/script.js"></script>
