--- a/page.html
+++ b/page.html
@@ -44,36 +44,25 @@
             <h1 class="p-front__title c-text">障がい福祉コンサルティング</h1>
             <P class="c-text">テキストが入ります。テキストが入ります。</P>
         </div>
-        <div class="p-box--news">
-            <ul class="p-box u-font-size">
-                <p>お知らせ</p>
-                <li class="p-box--news__group u-font-size">
-                    <a href="#">
-                        <p class="">2020/4/15</p>
-                        <p class="">ここにお知らせが入りますここにお知らせが入りますここにお知らせが入ります</p>
-                    </a>
-                </li>
-                <li class="p-box--news__group u-font-size">
-                    <a href="#">
-                        <p class="">2020/4/15</p>
-                        <p class="">ここにお知らせが入りますここにお知らせが入りますここにお知らせが入ります</p>
-                    </a>
-                </li>
-                <li class="p-box--news__group u-font-size">
-                    <a href="#">
-                        <p class="">2020/4/15</p>
-                        <p class="">ここにお知らせが入りますここにお知らせが入りますここにお知らせが入ります</p>
-                    </a>
-                </li>
-            </ul>
-        </div>
         <div class="p-box--menu u-padding20">
             <div class="p-box--menu__open u-margin20">
                 事業開業・開設支援
             </div>
-            <div class="p-box--menu__support u-margin20">
-                経営・運営改善
-            </div>
+        </div>
+        <div class="p-box--text">
+            <ul class="p-box">
+                </li>
+                <li class="p-box--news__group">
+                    <a href="#">
+                        <p class="u-font-size">ここにお知らせが入りますここにお知らせが入りますここにお知らせが入ります
+                            ここにお知らせが入りますここにお知らせが入りますここにお知らせが入りますここにお知らせが入りますここにお知らせが入りますここにお知らせが入ります
+                            ここにお知らせが入りますここにお知らせが入りますここにお知らせが入りますここにお知らせが入りますここにお知らせが入りますここにお知らせが入ります
+                            ここにお知らせが入りますここにお知らせが入りますここにお知らせが入りますここにお知らせが入りますここにお知らせが入りますここにお知らせが入ります
+                            ここにお知らせが入りますここにお知らせが入りますここにお知らせが入りますここにお知らせが入りますここにお知らせが入りますここにお知らせが入ります
+                        </p>
+                    </a>
+                </li>
+            </ul>
         </div>
     </main>
     <footer class="l-footer p-footer">
