--- a/page.html
+++ b/page.html
@@ -41,11 +41,11 @@
 <!-- トップ画面 -->
     <main class="l-main">
         <div class="p-front__top">
-            <h1 class="p-front__title c-text">障がい福祉コンサルティング</h1>
-            <P class="c-text">テキストが入ります。テキストが入ります。</P>
+            <h1 class="p-front__title c-text c-shadow">障がい福祉コンサルティング</h1>
+            <P class="c-text c-shadow">テキストが入ります。テキストが入ります。</P>
         </div>
         <div class="p-box--menu u-padding20">
-            <div class="p-box--menu__open u-margin20">
+            <div class="p-box--menu__open u-margin20 u-font-size__main u-padding__5">
                 事業開業・開設支援
             </div>
         </div>
