--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 <!-- トップ画面 -->
     <main class="l-main">
         <div class="p-front__top">
-            <h1 class="p-front__title c-text">障がい福祉コンサルティング</h1>
-            <P class="c-text">テキストが入ります。テキストが入ります。</P>
+            <h1 class="p-front__title c-text c-shadow">障がい福祉コンサルティング</h1>
+            <P class="c-text c-shadow u-padding20">テキストが入ります。テキストが入ります。</P>
         </div>
         <div class="p-box--news">
             <ul class="p-box u-font-size">
@@ -68,10 +68,10 @@
             </ul>
         </div>
         <div class="p-box--menu u-padding20">
-            <div class="p-box--menu__open u-margin20">
+            <div class="p-box--menu__open u-margin20 u-font-size__main u-padding__5">
                 事業開業・開設支援
             </div>
-            <div class="p-box--menu__support u-margin20">
+            <div class="p-box--menu__support u-margin20 u-font-size__main u-padding__5">
                 経営・運営改善
             </div>
         </div>
