--- a/front-page.html
+++ b/front-page.html
@@ -68,10 +68,10 @@
             </ul>
         </div>
         <div class="p-box--menu u-padding20">
-            <div class="p-box--menu__open u-margin20 u-font-size__main u-padding__5">
+            <div class="p-box--menu__open u-margin20 u-font-size__main u-padding__5 c-text c-shadow">
                 事業開業・開設支援
             </div>
-            <div class="p-box--menu__support u-margin20 u-font-size__main u-padding__5">
+            <div class="p-box--menu__support u-margin20 u-font-size__main u-padding__5 c-text c-shadow">
                 経営・運営改善
             </div>
         </div>
