--- a/single.html
+++ b/single.html
@@ -45,8 +45,8 @@
             <P class="c-text c-shadow u-padding20">テキストが入ります。テキストが入ります。</P>
         </div>
         <div class="p-box--menu u-padding20">
-            <div class="p-box--menu__open u-margin20 u-font-size__main u-padding__5">
-                事業開業・開設支援
+            <div class="p-box--menu__open u-margin20 u-font-size__main u-padding__5 c-text c-shadow">
+                お知らせ
             </div>
         </div>
         <div class="p-box--text">
